--- a/Project 1/Project1_v2.ipynb
+++ b/Project 1/Project1_v2.ipynb
@@ -85,6 +85,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -98,6 +99,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -110,6 +112,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -235,6 +238,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": true,
     "hidden": true,
     "scrolled": false
    },
@@ -249,6 +253,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -301,6 +306,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": true,
     "hidden": true,
     "scrolled": true
    },
@@ -365,6 +371,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": true,
     "hidden": true,
     "scrolled": true
    },
@@ -381,6 +388,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "collapsed": true,
     "hidden": true,
     "scrolled": false
    },
@@ -451,6 +459,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
+    "collapsed": true,
     "hidden": true,
     "scrolled": true
    },
@@ -471,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Calculate the total foot traffic for each station-date combo\n",
@@ -481,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Calculate the average foot traffic per day for each station\n",
@@ -491,7 +504,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "avg_ft_perday_df.to_csv('avg_ft_perday.csv')"
@@ -520,7 +535,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Find the top 10 stations with the most foot traffic\n",
@@ -699,7 +716,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Find the top 10 stations with highest pct of residents with college degree\n",
@@ -1205,7 +1224,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Merge individual station dataframes\n",
@@ -1232,6 +1253,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1263,6 +1285,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1274,7 +1297,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Find the top 10 most valuable stations\n",
